--- a/css/index.css
+++ b/css/index.css
@@ -272,6 +272,12 @@ p {
   font-family: 'Lato', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+  border-radius: 30px;
+}
+
 .fab {
   font-weight: 100;
 }
@@ -323,6 +329,7 @@ p {
   transition: 0.2s;
   cursor: pointer;
 }
+
 /* Tipo de menú y display general */
 @media only screen and (min-width: 320px) and (max-width: 920px) {
   .Left-panel {
